target_os = "ohos"
target_cpu = "arm64"
cc_wrapper = "ccache"

is_debug = false
dcheck_always_on = false
is_component_build = false

clang_base_path = "/home/penghuang/sources/llvm-install"

# workaround some build errors
treat_warnings_as_errors = false

dawn_use_swiftshader = false

# cxx args
use_custom_libcxx = true
# use_libcxx_modules = true
# libcxx_is_shared = false

chrome_root_store_only = true
use_kerberos = false


# disable symbol
# v8_symbol_level = 0
blink_symbol_level = 0
enable_nacl = false

# use_ozone = true
use_aura = true

# try build graphite and dawn
use_dawn = true
skia_use_dawn = true

# //components/signin/features.gni
enable_bound_session_credentials  = true

enable_printing = false
use_zygote = true
# use_static_angle = true

# enable_base_tracing = false
enable_screen_capture = false

use_bundled_fontconfig = true
